// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PromptModal renders 1`] = `
<body>
  <div
    aria-hidden="true"
  >
    <div
      class="Picasso-root"
    />
  </div>
  <div
    class="base-Modal fixed z-modal inset-0 flex flex-col text-lg leading-[normal] justify-center items-center"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="opacity-0 transition-opacity fixed -z inset-0 bg-black -webkit-tap-highlight-color bg-opacity"
      style="transition-duration: 300ms; opacity: 1;"
    />
    <div
      data-testid="sentinelStart"
      tabindex="0"
    />
    <div
      class="bg-white shadow-2 duration-300 delay-0 opacity-0 transition-opacity outline-none overflow-y flex flex-col m-4 sm:h-auto sm:m-8 max-w-[calc(100%_ sm:max-w-[calc(100%_ rounded-md w-[32.5rem] relative max-h-[calc(100%_ sm:max-h-[calc(100%_"
      role="dialog"
      style="transition-duration: 300ms; opacity: 1;"
      tabindex="-1"
    >
      <div
        class="pr-6 mt-8 mx-8 mb-0"
      >
        <h2
          class="m-0 text-xl text-black font-semibold"
        >
          Test title
        </h2>
      </div>
      <div
        class="flex relative flex-auto overflow-y"
      >
        <div
          class="pt-6 px-8 pb-8 overflow-auto flex-auto"
        >
          <p
            class="m-0 text-md text-graphite font-regular"
          >
            Test message
          </p>
        </div>
      </div>
      <div
        class="mt-0 mx-8 mb-8 text-right"
      >
        <button
          aria-disabled="false"
          class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [&+&]:ml-4 cursor-pointer no-underline hover:no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border border-solid text-black hover:border-black visited:text-black active:bg-gray active:border-black bg-white border-gray min-w h-8 py-0 px-4"
          data-component-type="button"
          role="button"
          tabindex="0"
          type="button"
        >
          <span
            class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline font-semibold whitespace-nowrap text-button"
          >
            Cancel
          </span>
        </button>
        <button
          aria-disabled="false"
          class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [&+&]:ml-4 cursor-pointer no-underline hover:no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#27D496] active:bg-[#00A96C] bg-green min-w h-8 py-0 px-4"
          data-component-type="button"
          role="button"
          tabindex="0"
          type="button"
        >
          <span
            class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline font-semibold whitespace-nowrap text-button"
          >
            Submit
          </span>
        </button>
      </div>
    </div>
    <div
      data-testid="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`PromptModal showPrompt opens and closes modal on Submit action 1`] = `
<body>
  <div>
    <div
      class="Picasso-root"
    >
      <button
        aria-disabled="false"
        class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [&+&]:ml-4 cursor-pointer no-underline hover:no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#4269D6] active:bg-[#1A41AB] bg-blue min-w h-8 py-0 px-4"
        data-component-type="button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline font-semibold whitespace-nowrap text-button"
        >
          Show
        </span>
      </button>
    </div>
  </div>
</body>
`;

exports[`PromptModal showPrompt opens and closes modal on Submit action 2`] = `
<body>
  <div>
    <div
      class="Picasso-root"
    >
      <button
        aria-disabled="false"
        aria-hidden="true"
        class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [&+&]:ml-4 cursor-pointer no-underline hover:no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#4269D6] active:bg-[#1A41AB] bg-blue min-w h-8 py-0 px-4"
        data-component-type="button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline font-semibold whitespace-nowrap text-button"
        >
          Show
        </span>
      </button>
      <div
        class="base-Modal fixed z-modal inset-0 flex flex-col text-lg leading-[normal] justify-center items-center"
        role="presentation"
      >
        <div
          aria-hidden="true"
          class="opacity-0 transition-opacity fixed -z inset-0 bg-black -webkit-tap-highlight-color bg-opacity"
          style="transition-duration: 300ms; opacity: 1;"
        />
        <div
          data-testid="sentinelStart"
          tabindex="0"
        />
        <div
          class="bg-white shadow-2 duration-300 delay-0 opacity-0 transition-opacity outline-none overflow-y flex flex-col m-4 sm:h-auto sm:m-8 max-w-[calc(100%_ sm:max-w-[calc(100%_ rounded-md w-[32.5rem] relative max-h-[calc(100%_ sm:max-h-[calc(100%_"
          role="dialog"
          style="transition-duration: 300ms; opacity: 1;"
          tabindex="-1"
        >
          <div
            class="pr-6 mt-8 mx-8 mb-0"
          >
            <h2
              class="m-0 text-xl text-black font-semibold"
            >
              Test title
            </h2>
          </div>
          <div
            class="flex relative flex-auto overflow-y"
          >
            <div
              class="pt-6 px-8 pb-8 overflow-auto flex-auto"
            >
              <p
                class="m-0 text-md text-graphite font-regular"
              >
                Test message
              </p>
            </div>
          </div>
          <div
            class="mt-0 mx-8 mb-8 text-right"
          >
            <button
              aria-disabled="false"
              class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [&+&]:ml-4 cursor-pointer no-underline hover:no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border border-solid text-black hover:border-black visited:text-black active:bg-gray active:border-black bg-white border-gray min-w h-8 py-0 px-4"
              data-component-type="button"
              role="button"
              tabindex="0"
              type="button"
            >
              <span
                class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline font-semibold whitespace-nowrap text-button"
              >
                Cancel
              </span>
            </button>
            <button
              aria-disabled="false"
              class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [&+&]:ml-4 cursor-pointer no-underline hover:no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#27D496] active:bg-[#00A96C] bg-green min-w h-8 py-0 px-4"
              data-component-type="button"
              role="button"
              tabindex="0"
              type="button"
            >
              <span
                class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline font-semibold whitespace-nowrap text-button"
              >
                Submit
              </span>
            </button>
          </div>
        </div>
        <div
          data-testid="sentinelEnd"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`PromptModal showPrompt opens and closes modal on Submit action 3`] = `
<body>
  <div>
    <div
      class="Picasso-root"
    >
      <button
        aria-disabled="false"
        class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [&+&]:ml-4 cursor-pointer no-underline hover:no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#4269D6] active:bg-[#1A41AB] bg-blue min-w h-8 py-0 px-4"
        data-component-type="button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline font-semibold whitespace-nowrap text-button"
        >
          Show
        </span>
      </button>
    </div>
  </div>
</body>
`;

exports[`PromptModal showPrompt with input returns result on Submit action 1`] = `
<body>
  <div>
    <div
      class="Picasso-root"
    >
      <button
        aria-disabled="false"
        class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [&+&]:ml-4 cursor-pointer no-underline hover:no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#4269D6] active:bg-[#1A41AB] bg-blue min-w h-8 py-0 px-4"
        data-component-type="button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline font-semibold whitespace-nowrap text-button"
        >
          Show
        </span>
      </button>
    </div>
  </div>
</body>
`;
